--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ window.addEventListener('mousemove', handleMouseMove);
 }
 body{
     background-color: #333;
-	background-image:url('https://o.remove.bg/downloads/e7a9fa4f-29ae-46c1-93f0-ab78e6c47f46/mahi2-removebg-preview.png');
+	background-image:url('https://res.cloudinary.com/da8hdfiix/image/upload//fl_attachment:mahi2-removebg-preview_2_cz332h//v1675423612/mahi2-removebg-preview_2_cz332h.png');
  background-position: 45% 56%;
  background-size: 500px 500px;
  background-repeat:no-repeat; 
